--- a/src/secondStyles.css
+++ b/src/secondStyles.css
@@ -16,6 +16,7 @@
 
   .fTag {
     display: flex;
+    flex: 1 1 calc(33.33% - 1.9rem);
     flex-direction: column;
     height: 22rem;
     background-color: aqua;
@@ -30,6 +31,12 @@
     width: 100%;
     height: 17rem;
     background-color: red;
+  }
+
+  .fTagPhoto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .fTagDetails{
